# katty

./: .gitignore  README.md  main.py  pyproject.toml  requirements-tests.txt  requirements.txt
.github/workflows/: test.yml
katty/: cli.py
katty/utils/: __init__.py
scripts/: coverage.sh  lint.sh  requirements.sh  test.sh
tests/: test_utils.py
