[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "katty"
dynamic = ["version"]
description = "Data science project template I use for all my Taipy projects"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "taipy>=3.1.1",
]
authors = [
    {name = "Santiago Papiernik", email = "spapiernik12@gmail.com"},
]
license = { "file" = "LICENSE" }

[project.scripts]
katty = "katty.cli:main"

[tool.pdm]
version = { source = "file", path = "katty/__init__.py" }
distribution = true

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
]
